fixed the bug with background color not showing on popup because of the z-index order on the input component

--- a/Input/Input.module.less
+++ b/Input/Input.module.less
@@ -15,6 +15,7 @@
 	text-overflow: ellipsis;
 	flex-grow: 1;
 	text-indent: @sand-input-text-indent;
+	z-index: 1;
 
 	&[type=number] {
 		-moz-appearance: textfield;
@@ -57,7 +58,7 @@
 	.bg {
 		position: absolute;
 		.position(0);
-		z-index: -1;
+		z-index: 0;
 		border-radius: @sand-input-border-radius;
 		transition: transform @sand-input-focus-duration ease-out, filter @sand-input-focus-duration ease-out;
 		will-change: transform, filter;
@@ -87,7 +88,7 @@
 		letter-spacing: 0.1px;
 		pointer-events: none;
 		opacity: 0;
-		z-index: -1;
+		z-index: 0;
 	}
 
 	&.small {
